--- a/fdx_search/templates/fdx_search/index.html
+++ b/fdx_search/templates/fdx_search/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
     <form action="/search/" enctype="multipart/form-data" method="post">
+    {% csrf_token %}
     <input name="file" type="file" />
     <input type="submit" value="Искать">
     </form>
