--- a/fdx_search/templates/fdx_search/search.html
+++ b/fdx_search/templates/fdx_search/search.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block body %}
-{{ file_md5 }}
+    {{ file_md5 }}<br />
+    {{ width }}x{{ height }}<br />
 {% endblock %}
