--- a/fdx_search/templates/fdx_search/search.html
+++ b/fdx_search/templates/fdx_search/search.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
+
+    <h1>Search</h1>
     <div  style="position: relative;">
         <img src="{{ image.file.url }}"  style="position: relative;">
     {% for location in face_locations  %}
-        <div style="position: relative; border: 1px solid red; top: {{ location.top}}px;left: {{ location.left}}px;width: {{ location.width}}px; height: {{ location.height}}px "></div>
+        <div style="position: absolute; border: 1px solid red; top: {{ location.top}}px;left: {{ location.left}}px;width: {{ location.width}}px; height: {{ location.height}}px "></div>
     {% endfor %}
     </div>
     {{ image.file_md5 }}<br />
