--- a/fdx_search/templates/fdx_search/search1.html
+++ b/fdx_search/templates/fdx_search/search1.html
@@ -5,7 +5,7 @@
     <div  style="position: relative;">
         <img src="{{ image.file.url }}"  style="position: relative;">
     {% for location in face_locations  %}
-        <div style="position: absolute; border: 1px solid red; top: {{ location.top}}px;left: {{ location.left}}px;width: {{ location.width}}px; height: {{ location.height}}px "></div>
+        <a href="{{ link }}/"><div style="position: absolute; border: 1px solid red; top: {{ location.top}}px;left: {{ location.left}}px;width: {{ location.width}}px; height: {{ location.height}}px "></div></a>
     {% endfor %}
     </div>
     {{ image.file_md5 }}<br />
