--- a/fdx_search/templates/fdx_search/search2.html
+++ b/fdx_search/templates/fdx_search/search2.html
@@ -7,7 +7,7 @@
     {% for location in face_locations  %}
     {% for location in face_locations  %}
         {% if location.num == num %}
-            <div style="position: absolute; border: 2px solid red; top: {{ location.top}}px;left: {{ location.left}}px;width: {{ location.width}}px; height: {{ location.height}}px "></div>
+            <div style="position: absolute; border: 3px dotted red; top: {{ location.top}}px;left: {{ location.left}}px;width: {{ location.width}}px; height: {{ location.height}}px "></div>
         {% else %}
         <a href="{{ link }}/"><div style="position: absolute; border: 1px solid red; top: {{ location.top}}px;left: {{ location.left}}px;width: {{ location.width}}px; height: {{ location.height}}px "></div></a>
         {% endif %}
