--- a/fdx_search/templates/fdx_search/search2.html
+++ b/fdx_search/templates/fdx_search/search2.html
@@ -14,16 +14,16 @@
     {% endfor %}
     {% endfor %}
     </div>
-    {{ image.file_md5 }}<br />
-    {{ image.width }}x{{ image.height }}
+    {#{{ image.file_md5 }}<br /> #}
+    {#{{ image.width }}x{{ image.height }} #}
     {# for top, right, bottom, left in face_locations: #}
-    ctx['num'] = {{  num }}<br />
-    ctx['left'] ={{ left }}<br />
-    ctx['right'] ={{ right }}<br />
-    ctx['bottom'] ={{ bottom }}<br />
-    ctx['left'] ={{ bottom }}<br />
-    ctx['width'] ={{ width }}<br />
-    ctx['height']={{ height }}<br />
+    {#ctx['num'] = {{  num }}<br /> #}
+    {#ctx['left'] ={{ left }}<br /> #}
+    {#ctx['right'] ={{ right }}<br /> #}
+    {#ctx['bottom'] ={{ bottom }}<br /> #}
+    {#ctx['left'] ={{ bottom }}<br /> #}
+    {#ctx['width'] ={{ width }}<br /> #}
+    {#ctx['height']={{ height }}<br /> #}
     {#  %}ctx['encoding'] ={{ encoding }}<br /><br /><br />  #}
     <pre>
     {# {{ query }} #}
