--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <title></title>
 </head>
 <body>
 {% block body %}
 {% endblock %}
+<footer class="footer">
+  <div class="content has-text-centered">
+    <p>
+      <strong>FDX</strong> 2019
+    </p>
+  </div>
+</footer>
 </body>
 </html>
