--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <title></title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 {% block body %}
 {% endblock %}
+{% block footer %}
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
@@ -17,5 +18,6 @@
     </p>
   </div>
 </footer>
+{% endblock %}
 </body>
 </html>
