--- a/fdx_search/templates/fdx_search/index.html
+++ b/fdx_search/templates/fdx_search/index.html
@@ -35,7 +35,7 @@
                         </label>
                     </div>
                 </div>
-                <div class="field is-grouped">
+                <div class="field is-grouped is-centered is-boxed ">
                     <div class="control">
                         <button class="button is-link">Искать</button>
                     </div>
