--- a/fdx_search/templates/fdx_search/index.html
+++ b/fdx_search/templates/fdx_search/index.html
@@ -35,8 +35,8 @@
                         </label>
                     </div>
                 </div>
-                <div class="field is-grouped is-centered is-boxed ">
-                    <div class="control">
+                <div class="field is-grouped  ">
+                    <div class="control is-centered is-boxed">
                         <button class="button is-link">Искать</button>
                     </div>
                 </div>
