--- a/fdx_search/templates/fdx_search/index.html
+++ b/fdx_search/templates/fdx_search/index.html
@@ -15,7 +15,7 @@
     </section>
     <section class="section">
         <div class="container">
-            <form action="/search/" enctype="multipart/form-data" method="post">
+            <form action="/search/" enctype="multipart/form-data" method="post" id="search_form">
                 {% csrf_token %}
                 <div class="field">
                     <div class="file is-centered is-boxed is-success has-name">
@@ -29,15 +29,8 @@
           Картинка…
         </span>
       </span>
-      <span class="file-name" id="filename">
-
-      </span>
+      <span class="file-name" id="filename"></span>
                         </label>
-                    </div>
-                </div>
-                <div class="field is-grouped  ">
-                    <div class="control is-centered is-boxed">
-                        <button class="button is-link">Искать</button>
                     </div>
                 </div>
             </form>
@@ -46,7 +39,9 @@
                 file.onchange = function () {
                     if (file.files.length > 0) {
 
+                        document.getElementById('search_form').submit();
                         document.getElementById('filename').innerHTML = file.files[0].name;
+                        document.getElementById('filename').innerHTML = document.getElementById('filename').innerHTML+'...';
 
                     }
                 };
