--- a/fdx_search/templates/fdx_search/search1.html
+++ b/fdx_search/templates/fdx_search/search1.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% block body %}
+{% block title %}FDX{% endblock %}
+{% block content %}
 
     <h1>Search</h1>
     <div  style="position: relative;">
