--- a/fdx_search/templates/fdx_search/search_error.html
+++ b/fdx_search/templates/fdx_search/search_error.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}FDX{% endblock %}
+{% block content %}
 {{ err }}
-</body>
-</html>
+{% endblock %}
+
