--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,24 @@
 </head>
 <body>
 {% block body %}
+    <section class="hero is-primary">
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title">
+                    FDX
+                </h1>
+
+                <h2 class="subtitle">
+                    Найдутся все
+                </h2>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            {% block content %}{% endblock %}
+        </div>
+    </section>
 {% endblock %}
 {% block footer %}
 <footer class="footer">
