--- a/fdx_search/templates/fdx_search/index.html
+++ b/fdx_search/templates/fdx_search/index.html
@@ -26,7 +26,7 @@
             if (file.files.length > 0) {
                 document.getElementById('search_form').submit();
                 document.getElementById('filename').innerHTML = file.files[0].name;
-                document.getElementById('filename').innerHTML = document.getElementById('filename').innerHTML + '...';
+                document.getElementById('filename').innerHTML = document.getElementById('filename').innerHTML + '...Загружаю...';
             }
         };
     </script>
