--- a/fdx_search/templates/fdx_search/search_error.html
+++ b/fdx_search/templates/fdx_search/search_error.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}FDX{% endblock %}
 {% block content %}
-{{ err }}
+{{ err }}. <a href="/">Поискать еще раз</a>
 {% endblock %}
 
