--- a/fdx_search/templates/fdx_search/search1.html
+++ b/fdx_search/templates/fdx_search/search1.html
@@ -1,12 +1,18 @@
 {% extends "base.html" %}
 {% block title %}FDX{% endblock %}
 {% block content %}
-
     <h1>Search</h1>
     <div  style="position: relative;">
-        <img src="{{ image.file.url }}"  style="position: relative;">
+        <img src="{{ image.file.url }}"  style="position: relative;" data-image-width="{{ image.width }}" data-image-height="{{ image.height }}">
     {% for location in face_locations  %}
-        <a href="{{  location.link }}/"><div style="position: absolute; border: 1px solid red; top: {{ location.top}}px;left: {{ location.left}}px;width: {{ location.width}}px; height: {{ location.height}}px "></div></a>
+        <a href="{{  location.link }}/">
+            <div style="position: absolute; border: 1px solid red; "
+                 data-src-top="{{ location.top }}"
+                 data-src-left="{{ location.left}}"
+                 data-src-width="{{ location.width}}"
+                 data-src-height="{{ location.height}}"
+                    ></div>
+        </a>
     {% endfor %}
     </div>
     {{ image.file_md5 }}<br />
