--- a/fdx_search/templates/fdx_search/search2.html
+++ b/fdx_search/templates/fdx_search/search2.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}FDX{% endblock %}
-{% block body %}
+{% block content %}
 
     <h1>Search</h1>
     <div  style="position: relative;">
